# rusty-g6

./: .gitignore  DEVICE_BEHAVIOR_OBSERVATIONS.md  G6_READ_PROTOCOL.md  LICENSE  README.md  READ_STATE_FINDINGS.md  RESPONSE_ANALYSIS.md  analyze_all_packets.py  analyze_new_capture.py  build.js  dev.js  find_output_state.py  setup-usb-permissions.sh
.clinerules/: rules.md
docs/: build-guide.md  output-detection-issue.md  rusty-g6-usb-spec.md  usb-protocol.md
rust/: package-lock.json  package.json
rust/src/: App.css  App.tsx
rust/src-tauri/: Cargo.toml  PKGBUILD  rusty-g6.spec  tauri.conf.json
rust/src-tauri/DEBIAN/: control  postinst
rust/src-tauri/icons/: README.md  icon.icns
rust/src-tauri/src/: alsa_mic_setup.rs  g6_device.rs  g6_protocol.rs  g6_protocol_v2.rs  g6_spec.rs  lib.rs  main.rs
