[package]
name = "rusty-g6"
version = "0.1.0"
description = "Cross-platform GUI for SoundBlaster X G6 control"
authors = ["Rusty G6 Team"]
license = "MIT"
repository = "https://github.com/jackbrumley/rusty-g6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rusty_g6_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

# USB communication libraries
rusb = "0.9"
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
